--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,7 @@
   <head>
     <title ng-bind="pageTitle"></title>
 
-    <!-- social media tags -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@joshdmiller">
-    <meta name="twitter:title" content="ngBoilerplate">
-    <meta name="twitter:description" content="Non-Trivial AngularJS Made Easy: Everything you need to kickstart AngularJS projects: a best-practice directory structure, an intelligent build system, and the best web design libraries around.">
-    <meta name="twitter:creator" content="@joshdmiller">
-    <meta name="twitter:image:src" content="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/Octocat.png?1366128846">
-    <meta property="og:title" content="ngBoilerplate" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://bit.ly/ngBoilerplate" />
-    <meta property="og:image" content="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/Octocat.png?1366128846" />
-    <meta property="og:description" content="Non-Trivial AngularJS Made Easy: Everything you need to kickstart AngularJS projects: a best-practice directory structure, an intelligent build system, and the best web design libraries around.">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- font awesome from BootstrapCDN -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -27,11 +14,7 @@
     <!-- compiled JavaScript --><% scripts.forEach( function ( file ) { %>
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
 
-    <!-- it's stupid to have to load it here, but this is for the +1 button -->
-    <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-      { "parsetags": "explicit" }
-    </script>
-  </head>
+ </head>
   <body>
     <div class="container">
       <div class="navbar navbar-default">
@@ -46,13 +29,13 @@
           <div class="navbar-brand">
             ngbp
             <small>
-              <a href="http://github.com/ngbp/ngbp/blob/v<%= version %>-release/CHANGELOG.md">
+              <a href="http://github.com/kennethlawrence/ngbp-slim-sass/CHANGELOG.md">
                 v<%= version %>
               </a>
             </small>
           </div>
         </div>
-        <div class="collapse navbar-collapse" collapse="menuCollapsed">
+        <div class="collapse navbar-collapse" ng-hide="menuCollapsed" collapse="menuCollapsed">
           <ul class="nav navbar-nav">
             <li ui-sref-active="active">
               <a href ui-sref="home">
@@ -67,19 +50,19 @@
               </a>
             </li>
             <li>
-              <a href="https://github.com/ngbp/ngbp#readme">
+              <a href="https://github.com/kennethlawrence/ngbp-slim-sass#readme">
                 <i class="fa fa-book"></i>
                 Read the Docs
               </a>
             </li>
             <li>
-              <a href="https://github.com/ngbp/ngbp">
+              <a href="https://github.com/kennethlawrence/ngbp-slim-sass">
                 <i class="fa fa-github-alt"></i>
                 Github
               </a>
             </li>
             <li>
-              <a href="https://github.com/ngbp/ngbp/issues">
+              <a href="https://github.com/kennethlawrence/ngbp-slim-sass/issues">
                 <i class="fa fa-comments"></i>
                 Support
               </a>
@@ -95,22 +78,23 @@
       <div class="container">
         <div class="footer-inner">
           <ul class="social">
-            <li><a target="_blank" href="http://gplus.to/joshdmiller"><i class="fa fa-google-plus-sign"></i></a></li>
-            <li><a target="_blank" href="http://twitter.com/joshdmiller"><i class="fa fa-twitter-sign"></i></a></li>
-            <li><a target="_blank" href="http://linkedin.com/in/joshdmiller"><i class="fa fa-linkedin-sign"></i></a></li>
-            <li><a target="_blank" href="http://github.com/ngbp/ngbp"><i class="fa fa-github-sign"></i></a></li>
+            <li>
+              <a target="_blank" href="http://github.com/kennethlawrence/ngbp-slim-sass">
+                <i class="fa fa-github-sign"></i>
+              </a>
+            </li>
           </ul>
           
 
           <p>
-            (c) 2013 <a href="http://www.joshdavidmiller.com">Josh David Miller</a>. 
-            <a href="http://github.com/ngbp/ngbp/fork_select">Fork this</a>
+            Original ngBoilerplate (c) 2013 <a href="http://www.joshdavidmiller.com">Josh David Miller</a>. 
+            <strong>ngbp-slim-sass</strong> modifications (c) 2014 Kenneth Lawrence.
+            <a href="http://github.com/kennethlawrence/ngbp-slim-sass/fork_select">Fork this</a>
             to kickstart your next project.
             <br />
-            ngbp is based on
+            ngbp-sass-slim is based on
             <a href="http://www.angularjs.org">AngularJS</a>,
-            <a href="http://getbootstrap.com">Bootstrap</a>, 
-            <a href="http://angular-ui.github.com/bootstrap">UI Bootstrap</a>,
+            <a href="http://sass-lang.com">SASS</a>
             and 
             <a href="http://fortawesome.github.com/Font-Awesome">Font Awesome</a>.        
           </p>
